SERVER-58184 Move getOldestActiveTimestamp after prepare reconstruction